src/tinyPythonParser.java
// Generated from D:/JavaProject/CompilerProj/TinyToJVM/tinyPython.g4 by ANTLR 4.13.1

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.io.IOException;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class tinyPythonParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, STRING = 21, NUMBER = 22, INTEGER = 23, NEWLINE = 24,
            NAME = 25, STRING_LITERAL = 26, DECIMAL_INTEGER = 27, OPEN_PAREN = 28, CLOSE_PAREN = 29,
            OPEN_BRACK = 30, CLOSE_BRACK = 31, OPEN_BRACE = 32, CLOSE_BRACE = 33, SKIP_ = 34,
            UNKNOWN_CHAR = 35;
    public static final int
            RULE_program = 0, RULE_file_input = 1, RULE_defs = 2, RULE_stmt = 3, RULE_simple_stmt = 4,
            RULE_small_stmt = 5, RULE_assignment_stmt = 6, RULE_flow_stmt = 7, RULE_break_stmt = 8,
            RULE_continue_stmt = 9, RULE_compound_stmt = 10, RULE_if_stmt = 11, RULE_while_stmt = 12,
            RULE_def_stmt = 13, RULE_suite = 14, RULE_args = 15, RULE_return_stmt = 16,
            RULE_test = 17, RULE_print_stmt = 18, RULE_print_arg = 19, RULE_comp_op = 20,
            RULE_expr = 21, RULE_opt_paren = 22;

    private static String[] makeRuleNames() {
        return new String[]{
                "program", "file_input", "defs", "stmt", "simple_stmt", "small_stmt",
                "assignment_stmt", "flow_stmt", "break_stmt", "continue_stmt", "compound_stmt",
                "if_stmt", "while_stmt", "def_stmt", "suite", "args", "return_stmt",
                "test", "print_stmt", "print_arg", "comp_op", "expr", "opt_paren"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'='", "'break'", "'continue'", "'if'", "':'", "'elif'", "'else'",
                "'while'", "'def'", "','", "'return'", "'print'", "'<'", "'>'", "'=='",
                "'>='", "'<='", "'!='", "'+'", "'-'", null, null, null, null, null, null,
                null, "'('", "')'", "'['", "']'", "'{'", "'}'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, "STRING", "NUMBER",
                "INTEGER", "NEWLINE", "NAME", "STRING_LITERAL", "DECIMAL_INTEGER", "OPEN_PAREN",
                "CLOSE_PAREN", "OPEN_BRACK", "CLOSE_BRACK", "OPEN_BRACE", "CLOSE_BRACE",
                "SKIP_", "UNKNOWN_CHAR"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "tinyPython.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public tinyPythonParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ProgramContext extends ParserRuleContext {
        public File_inputContext file_input() {
            return getRuleContext(File_inputContext.class, 0);
        }

        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_program;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterProgram(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) {
                try {
                    ((tinyPythonListener) listener).exitProgram(this);
                } catch (IOException e) {
                    throw new RuntimeException(e);
                }
            }
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(46);
                file_input();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class File_inputContext extends ParserRuleContext {
        public DefsContext defs() {
            return getRuleContext(DefsContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(tinyPythonParser.EOF, 0);
        }

        public List<TerminalNode> NEWLINE() {
            return getTokens(tinyPythonParser.NEWLINE);
        }

        public TerminalNode NEWLINE(int i) {
            return getToken(tinyPythonParser.NEWLINE, i);
        }

        public List<StmtContext> stmt() {
            return getRuleContexts(StmtContext.class);
        }

        public StmtContext stmt(int i) {
            return getRuleContext(StmtContext.class, i);
        }

        public File_inputContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_file_input;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterFile_input(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) {
                try {
                    ((tinyPythonListener) listener).exitFile_input(this);
                } catch (IOException e) {
                    throw new RuntimeException(e);
                }
            }
        }
    }

    public final File_inputContext file_input() throws RecognitionException {
        File_inputContext _localctx = new File_inputContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_file_input);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(48);
                defs();
                setState(53);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 50338076L) != 0)) {
                    {
                        setState(51);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case NEWLINE: {
                                setState(49);
                                match(NEWLINE);
                            }
                            break;
                            case T__1:
                            case T__2:
                            case T__3:
                            case T__7:
                            case T__10:
                            case T__11:
                            case NAME: {
                                setState(50);
                                stmt();
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(55);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(56);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DefsContext extends ParserRuleContext {
        public List<TerminalNode> NEWLINE() {
            return getTokens(tinyPythonParser.NEWLINE);
        }

        public TerminalNode NEWLINE(int i) {
            return getToken(tinyPythonParser.NEWLINE, i);
        }

        public List<Def_stmtContext> def_stmt() {
            return getRuleContexts(Def_stmtContext.class);
        }

        public Def_stmtContext def_stmt(int i) {
            return getRuleContext(Def_stmtContext.class, i);
        }

        public DefsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_defs;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterDefs(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).exitDefs(this);
        }
    }

    public final DefsContext defs() throws RecognitionException {
        DefsContext _localctx = new DefsContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_defs);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(62);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            setState(60);
                            _errHandler.sync(this);
                            switch (_input.LA(1)) {
                                case NEWLINE: {
                                    setState(58);
                                    match(NEWLINE);
                                }
                                break;
                                case T__8: {
                                    setState(59);
                                    def_stmt();
                                }
                                break;
                                default:
                                    throw new NoViableAltException(this);
                            }
                        }
                    }
                    setState(64);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StmtContext extends ParserRuleContext {
        public Simple_stmtContext simple_stmt() {
            return getRuleContext(Simple_stmtContext.class, 0);
        }

        public Compound_stmtContext compound_stmt() {
            return getRuleContext(Compound_stmtContext.class, 0);
        }

        public StmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterStmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).exitStmt(this);
        }
    }

    public final StmtContext stmt() throws RecognitionException {
        StmtContext _localctx = new StmtContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_stmt);
        try {
            setState(67);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__1:
                case T__2:
                case T__10:
                case T__11:
                case NAME:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(65);
                    simple_stmt();
                }
                break;
                case T__3:
                case T__7:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(66);
                    compound_stmt();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Simple_stmtContext extends ParserRuleContext {
        public Small_stmtContext small_stmt() {
            return getRuleContext(Small_stmtContext.class, 0);
        }

        public TerminalNode NEWLINE() {
            return getToken(tinyPythonParser.NEWLINE, 0);
        }

        public Simple_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_simple_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterSimple_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).exitSimple_stmt(this);
        }
    }

    public final Simple_stmtContext simple_stmt() throws RecognitionException {
        Simple_stmtContext _localctx = new Simple_stmtContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_simple_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(69);
                small_stmt();
                setState(70);
                match(NEWLINE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Small_stmtContext extends ParserRuleContext {
        public Assignment_stmtContext assignment_stmt() {
            return getRuleContext(Assignment_stmtContext.class, 0);
        }

        public Flow_stmtContext flow_stmt() {
            return getRuleContext(Flow_stmtContext.class, 0);
        }

        public Print_stmtContext print_stmt() {
            return getRuleContext(Print_stmtContext.class, 0);
        }

        public Return_stmtContext return_stmt() {
            return getRuleContext(Return_stmtContext.class, 0);
        }

        public Small_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_small_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterSmall_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).exitSmall_stmt(this);
        }
    }

    public final Small_stmtContext small_stmt() throws RecognitionException {
        Small_stmtContext _localctx = new Small_stmtContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_small_stmt);
        try {
            setState(76);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case NAME:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(72);
                    assignment_stmt();
                }
                break;
                case T__1:
                case T__2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(73);
                    flow_stmt();
                }
                break;
                case T__11:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(74);
                    print_stmt();
                }
                break;
                case T__10:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(75);
                    return_stmt();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Assignment_stmtContext extends ParserRuleContext {
        public TerminalNode NAME() {
            return getToken(tinyPythonParser.NAME, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public Assignment_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_assignment_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterAssignment_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).exitAssignment_stmt(this);
        }
    }

    public final Assignment_stmtContext assignment_stmt() throws RecognitionException {
        Assignment_stmtContext _localctx = new Assignment_stmtContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_assignment_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(78);
                match(NAME);
                setState(79);
                match(T__0);
                setState(80);
                expr(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Flow_stmtContext extends ParserRuleContext {
        public Break_stmtContext break_stmt() {
            return getRuleContext(Break_stmtContext.class, 0);
        }

        public Continue_stmtContext continue_stmt() {
            return getRuleContext(Continue_stmtContext.class, 0);
        }

        public Flow_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_flow_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterFlow_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).exitFlow_stmt(this);
        }
    }

    public final Flow_stmtContext flow_stmt() throws RecognitionException {
        Flow_stmtContext _localctx = new Flow_stmtContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_flow_stmt);
        try {
            setState(84);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(82);
                    break_stmt();
                }
                break;
                case T__2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(83);
                    continue_stmt();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Break_stmtContext extends ParserRuleContext {
        public Break_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_break_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterBreak_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).exitBreak_stmt(this);
        }
    }

    public final Break_stmtContext break_stmt() throws RecognitionException {
        Break_stmtContext _localctx = new Break_stmtContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_break_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(86);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Continue_stmtContext extends ParserRuleContext {
        public Continue_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_continue_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterContinue_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).exitContinue_stmt(this);
        }
    }

    public final Continue_stmtContext continue_stmt() throws RecognitionException {
        Continue_stmtContext _localctx = new Continue_stmtContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_continue_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Compound_stmtContext extends ParserRuleContext {
        public If_stmtContext if_stmt() {
            return getRuleContext(If_stmtContext.class, 0);
        }

        public While_stmtContext while_stmt() {
            return getRuleContext(While_stmtContext.class, 0);
        }

        public Compound_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_compound_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterCompound_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).exitCompound_stmt(this);
        }
    }

    public final Compound_stmtContext compound_stmt() throws RecognitionException {
        Compound_stmtContext _localctx = new Compound_stmtContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_compound_stmt);
        try {
            setState(92);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__3:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(90);
                    if_stmt();
                }
                break;
                case T__7:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(91);
                    while_stmt();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class If_stmtContext extends ParserRuleContext {
        public List<TestContext> test() {
            return getRuleContexts(TestContext.class);
        }

        public TestContext test(int i) {
            return getRuleContext(TestContext.class, i);
        }

        public List<SuiteContext> suite() {
            return getRuleContexts(SuiteContext.class);
        }

        public SuiteContext suite(int i) {
            return getRuleContext(SuiteContext.class, i);
        }

        public If_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_if_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterIf_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).exitIf_stmt(this);
        }
    }

    public final If_stmtContext if_stmt() throws RecognitionException {
        If_stmtContext _localctx = new If_stmtContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_if_stmt);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(94);
                match(T__3);
                setState(95);
                test();
                setState(96);
                match(T__4);
                setState(97);
                suite();
                setState(105);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 8, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(98);
                                match(T__5);
                                setState(99);
                                test();
                                setState(100);
                                match(T__4);
                                setState(101);
                                suite();
                            }
                        }
                    }
                    setState(107);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 8, _ctx);
                }
                setState(111);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 9, _ctx)) {
                    case 1: {
                        setState(108);
                        match(T__6);
                        setState(109);
                        match(T__4);
                        setState(110);
                        suite();
                    }
                    break;
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class While_stmtContext extends ParserRuleContext {
        public TestContext test() {
            return getRuleContext(TestContext.class, 0);
        }

        public SuiteContext suite() {
            return getRuleContext(SuiteContext.class, 0);
        }

        public While_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_while_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterWhile_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).exitWhile_stmt(this);
        }
    }

    public final While_stmtContext while_stmt() throws RecognitionException {
        While_stmtContext _localctx = new While_stmtContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_while_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(113);
                match(T__7);
                setState(114);
                test();
                setState(115);
                match(T__4);
                setState(116);
                suite();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class Def_stmtContext extends ParserRuleContext {
        public TerminalNode NAME() {
            return getToken(tinyPythonParser.NAME, 0);
        }

        public TerminalNode OPEN_PAREN() {
            return getToken(tinyPythonParser.OPEN_PAREN, 0);
        }

        public ArgsContext args() {
            return getRuleContext(ArgsContext.class, 0);
        }

        public TerminalNode CLOSE_PAREN() {
            return getToken(tinyPythonParser.CLOSE_PAREN, 0);
        }

        public SuiteContext suite() {
            return getRuleContext(SuiteContext.class, 0);
        }

        public Def_stmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_def_stmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterDef_stmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).exitDef_stmt(this);
        }
    }

    public final Def_stmtContext def_stmt() throws RecognitionException {
        Def_stmtContext _localctx = new Def_stmtContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_def_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(118);
                match(T__8);
                setState(119);
                match(NAME);
                setState(120);
                match(OPEN_PAREN);
                setState(121);
                args();
                setState(122);
                match(CLOSE_PAREN);
                setState(123);
                match(T__4);
                setState(124);
                suite();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SuiteContext extends ParserRuleContext {
        public Simple_stmtContext simple_stmt() {
            return getRuleContext(Simple_stmtContext.class, 0);
        }

        public TerminalNode NEWLINE() {
            return getToken(tinyPythonParser.NEWLINE, 0);
        }

        public List<StmtContext> stmt() {
            return getRuleContexts(StmtContext.class);
        }

        public StmtContext stmt(int i) {
            return getRuleContext(StmtContext.class, i);
        }

        public SuiteContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_suite;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).enterSuite(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof tinyPythonListener) ((tinyPythonListener) listener).exitSuite(this);
        }
    }
